--- a/client/src/styles/form.css
+++ b/client/src/styles/form.css
@@ -1,7 +1,7 @@
 
 form{
     border-radius: 20px;
-    width: 20%;
+    width: 40vw;
     margin: auto;
     padding: 30px;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.251);
@@ -29,7 +29,17 @@ form .inputField input{
     border: 2px solid black;
     font-size: 18px;
     padding: 5px;
+    width: auto;
+    width: 100%;
 }
+/* form .inputField input[type="file"]::file-selector-button {
+    background-color: #1058B7;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 3px;
+} */
+
 form button{
     width: 120px;
     height: 40px;
@@ -57,4 +67,16 @@ form .showPassword{
 form .showPassword input{
     width: 20px;
     scale: 1.4;
+}
+
+@media only screen and (max-width: 1300px) {
+    form{
+        width: 70vw;
+        margin: auto;
+    }
+}
+@media only screen and (max-width: 700px) {
+    .container{
+        width: 95vw;
+    }
 }
